This file lists bigger/noteworthy changes, only...

Version 1.0 (upcoming)
dyncall:
  o PPC64 single-precision float fixes for more than 13 float args (thanks Masanori!)
  o fixed potential buffer overrun on ARM64
  o error code handling (dcGetError) changes, flag is now cleared (work still
    underway)
  o MIPS n64 ellipsis call fixes
  o ARM32 armhf ellipsis call fixes
  o better C++ compiler support (for pointer conversions)
dyncallback:
  o PPC64 single-precision float fixes for more than 13 float args (thanks Masanori!)
  o MIPS o32 (big- and little-endian), EABI (32 bit, little-endian) and n64 (big-endian) support
  o SPARC (32-bit) support
general:
  o marked assembly code as not needing an execstack, for security and better/easier integration
    into other projects/builds; modern toolchains do that automatically on compilation, but not
    for hand written assembly code (thanks Thorsten Behrens for report and analysis)
doc:
  o working html doc generation from TEX sources
  o SPARC (32-bit) calling convention description
bindings:
  o better documentation, removed relative path dependencies, general cleanup
  o python: updated to latest signature format (was still on 0.1)
  o java: rewritten (old version was never complete, anyways)
buildsys:
  o cmake: made to work on systems without C++ compiler (thanks Franklin Mathieu)

Version 0.9 (2015/12/31)
dyncall:
  o ARM64 support (AAPCS64 on Linux & Apple's derived version on iOS)
  o armhf calling convention support for ARM32
  o PPC64 support, including syscalls (thanks Masanori!)
  o introduced dcArgF and dcVArgF for flexible/convenient argument binding (works like dcCallF/dcVCallF but without the function call)
  o using -fPIC by default for FreeBSD
  o PPC32 linux syscall support
  o fixed return value errors for ARM32 on some platforms (e.g. freebsd/arm32, nintendo ds); arm & thumb mode
dyncallback:
  o ARM64 support (AAPCS64 on Linux, Apple's derived version on iOS)